--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "react-dom": "^16.6.3",
     "react-fittext": "^1.0.0",
     "react-media": "^1.8.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "query-string": "^6.2.0"
   },
   "devDependencies": {
     "@types/react": "^16.7.7",
@@ -85,6 +86,7 @@
     "mockjs": "^1.0.1-beta3",
     "prettier": "1.15.2",
     "pro-download": "^1.0.1",
+    "slash2": "^2.0.0",
     "stylelint": "^9.8.0",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.0.0",
@@ -93,8 +95,7 @@
     "tslint-react": "^3.6.0",
     "umi": "^2.2.7",
     "umi-plugin-ga": "^1.1.3",
-    "umi-plugin-react": "^1.2.0",
-    "slash2": "^2.0.0"
+    "umi-plugin-react": "^1.2.0"
   },
   "optionalDependencies": {
     "puppeteer": "^1.10.0"
