--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "docker:push": "npm run docker-hub:build && npm run docker:tag && docker push chenshuai2144/ant-design-pro"
   },
   "dependencies": {
+    "@antv/data-set": "^0.10.0",
     "@babel/runtime": "^7.1.5",
     "antd": "^3.10.9",
     "bizcharts": "^3.4.0",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
-    "@antv/data-set": "^0.10.0",
     "classnames": "^2.2.6",
     "dva": "^2.4.0",
     "enquire-js": "^0.2.1",
@@ -49,6 +49,7 @@
     "path-to-regexp": "^2.4.0",
     "prop-types": "^15.5.10",
     "qs": "^6.6.0",
+    "query-string": "^6.2.0",
     "rc-animate": "^2.4.4",
     "react": "^16.6.3",
     "react-container-query": "^0.11.0",
@@ -57,8 +58,8 @@
     "react-dom": "^16.6.3",
     "react-fittext": "^1.0.0",
     "react-media": "^1.8.0",
-    "react-router-dom": "^4.3.1",
-    "query-string": "^6.2.0"
+    "react-particles-js": "^2.4.2",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^16.7.7",
